--- a/3D.html
+++ b/3D.html
@@ -1,79 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Design Source is place for new designers learn about 2D and 3D design. As well as a collection of tools to get a good start."
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Design Source | 3D</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Design Source is place for new designers learn about 2D and 3D design. As well as a collection of tools to get a good start.">
-	<link rel="stylesheet" href="styles.css">
-	<title>Design Source | 3D</title>
-</head>
-
-<body>
-	<header id="three-img">
-		<div class="container">
-			<h1>
-				3D Artists
-			</h1>
-			<p class="p-h">
-				Creating the 3D assets used in games.
-			</p>
-		</div>
-	</header>
-	<nav>
-		<ul>
-			<li><a href="home.html">Home</a></li>
-			<li><a href="2D.html">2D</a></li>
-			<li><a class="active" href="3D.html">3D</a></li>
-			<li><a href="resources.html">Resources</a></li>
-			<li><a href="tools.html">Tools</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</nav>
-	<main>
-		<div class="container">
-			<div class="logoimg">
-				<img src="images/website%20logo.jpg" id="logo" alt="Logo">
-			</div>
-			<h2>3D Design</h2>
-			<p></p>
-			<div class="vid-links">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/2GHUdUmcr9E" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/TKZIYc-Ayy8" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-			<table>
-				<caption>Concepts To Learn</caption>
-				<tr>
-					<th>Fundamentals</th>
-					<th>Description</th>
-				</tr>
-				<tr>
-					<td>Hard Surface Modeling</td>
-					<td>Modeling none organic subject matter. Cars, Furniture etc.</td>
-				</tr>
-				<tr>
-					<td>Soft Surface Modeling</td>
-					<td>Modeling organic subject matter. Characters, Creatures etc.</td>
-				</tr>
-				<tr>
-					<td>Materials</td>
-					<td>Creating materials for 3D models.</td>
-				</tr>
-				<tr>
-					<td>Animation</td>
-					<td>Bringing 3D models to live. </td>
-				</tr>
-			</table>
-		</div>
-	</main>
-	<footer>
-		<div class="copy">
-			copyright &copy; ramon luna carrillo
-		</div>
-		<div class="imglink">
-			<a href="links.html">links to images used</a>
-		</div>
-	</footer>
-</body>
-
+  <body>
+    <header id="three-img">
+      <div class="container">
+        <h1>3D Artists</h1>
+        <p class="p-h">Creating the 3D assets used in games.</p>
+      </div>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="2D.html">2D</a></li>
+        <li><a class="active" href="3D.html">3D</a></li>
+        <li><a href="resources.html">Resources</a></li>
+        <li><a href="tools.html">Tools</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <main>
+      <div class="container">
+        <div class="logoimg">
+          <img src="images/website%20logo.jpg" id="logo" alt="Logo" />
+        </div>
+        <h2>3D Design</h2>
+        <p></p>
+        <div class="vid-links">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/2GHUdUmcr9E"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/TKZIYc-Ayy8"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <table>
+          <caption>
+            Concepts To Learn
+          </caption>
+          <tr>
+            <th>Fundamentals</th>
+            <th>Description</th>
+          </tr>
+          <tr>
+            <td>Hard Surface Modeling</td>
+            <td>Modeling none organic subject matter. Cars, Furniture etc.</td>
+          </tr>
+          <tr>
+            <td>Soft Surface Modeling</td>
+            <td>Modeling organic subject matter. Characters, Creatures etc.</td>
+          </tr>
+          <tr>
+            <td>Materials</td>
+            <td>Creating materials for 3D models.</td>
+          </tr>
+          <tr>
+            <td>Animation</td>
+            <td>Bringing 3D models to live.</td>
+          </tr>
+        </table>
+      </div>
+    </main>
+    <footer>
+      <div class="copy">copyright &copy; ramon luna carrillo</div>
+      <div class="imglink">
+        <a href="links.html">links to images used</a>
+      </div>
+    </footer>
+  </body>
 </html>
