--- a/tools.html
+++ b/tools.html
@@ -1,135 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Design Source is place for new designers learn about 2D and 3D design. As well as a collection of tools to get a good start."
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Design Source | Tools</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Design Source is place for new designers learn about 2D and 3D design. As well as a collection of tools to get a good start.">
-	<link rel="stylesheet" href="styles.css">
-	<title>Design Source | Tools</title>
-</head>
-
-<body>
-	<header id="tool-img">
-		<div class="container">
-			<h1>
-				Tools
-			</h1>
-			<p class="p-h">
-				Collection of software and materials.
-			</p>
-		</div>
-	</header>
-	<nav>
-		<ul>
-			<li><a href="home.html">Home</a></li>
-			<li><a href="2D.html">2D</a></li>
-			<li><a href="3D.html">3D</a></li>
-			<li><a href="resources.html">Resources</a></li>
-			<li><a class="active" href="tools.html">Tools</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</nav>
-	<main>
-		<div class="container">
-			<div class="logoimg">
-				<img src="images/website%20logo.jpg" id="logo" alt="Logo">
-			</div>
-			<h2>Software and Hardware</h2>
-			<p>List of tools you'll need to get you started.</p>
-			<div class="d-list">
-				<h3>Hardware</h3>
-				<dl>
-					<dt>Computer</dt>
-					<dd>Nothing to special is needed to get started. For 2D artists, a simple computer from your local best buy should do.
-						As for 3D artists then a bit more powerfull computer is needed. Although work can be done without a dedicated graphics card.
-						It would be best to have a computer with one for better performance.</dd>
-				</dl>
-				<dl>
-					<dt>Wacom Tablets</dt>
-					<dd>Wacom are a good choice to start off. Don't spend money on a cintiq, since they are way to expensive.</dd>
-				</dl>
-				<div class="img">
-					<a href="https://us-store.wacom.com/catalog/pen-tablets/wacom-intuos" target="_blank">
-						<img src="images/wacum.jpg" alt="Wacom" class="imglink2">
-					</a>
-				</div>
-				<dl>
-					<dt>Huion Tablets</dt>
-					<dd>Huion are a cheaper version of wacom but they are just as good. Very good choice if you are tight on money.</dd>
-				</dl>
-				<div class="img">
-					<a href="https://www.huiontablet.com/all-products/graphic-tablets/680tf.html" target="_blank">
-						<img src="images/Huion.JPG" alt="Huion" class="imglink2">
-					</a>
-				</div>
-			</div>
-			<div class="d-list">
-				<h3>Software For 2D</h3>
-				<dl>
-					<dt>Photoshop</dt>
-					<dd>Photoshop is the industrial standard but adobe sells it as a service.
-						There is a monthy fee but with that fee they offer cloud storage. </dd>
-				</dl>
-				<div class="img">
-					<a href="https://www.adobe.com/products/photoshop.html?sdid=KKQIN&mv=search&ef_id=Cj0KCQiA6dLgBRDoARIsAJgoM4seFOAV4TZHWeE5wPuonVJFgO7VDqYREh9qCyPtQ8kLzi8D_xzu37waAr5iEALw_wcB:G:s&s_kwcid=AL!3085!3!301413807968!e!!g!!photoshop" target="_blank">
-						<img src="images/Photoshop.png" alt="Photoshop" class="imglink2">
-					</a>
-				</div>
-				<dl>
-					<dt>Clip Studio Paint</dt>
-					<dd>Clip Studio was mainly made for comic books but works the same way as photoshop with out the service fee.
-						Sometimes it's on sale. </dd>
-				</dl>
-				<div class="img">
-					<a href="https://www.clipstudio.net/en" target="_blank">
-						<img src="images/Clip%20Studio%20Paint.JPG" alt="Clip Studio Paint" class="imglink2">
-					</a>
-				</div>
-				<dl>
-					<dt>Free Options</dt>
-					<dd>Here are some free options that do the same thing.</dd>
-				</dl>
-				<div class="img">
-					<a href="https://krita.org/en/" target="_blank">
-						<img src="images/krita.jpg" alt="Krita" class="imglink2">
-					</a>
-					<a href="https://medibangpaint.com/en/" target="_blank">
-						<img src="images/medibang.jpg" alt="Medibang" class="imglink2">
-					</a>
-				</div>
-			</div>
-			<div class="d-list">
-				<h3>Software For 3D</h3>
-				<dl>
-					<dt>Blender</dt>
-					<dd>Free software for 3D modeling, a great start for anyone to learn.</dd>
-				</dl>
-				<div class="img">
-					<a href="https://www.blender.org/" target="_blank">
-						<img src="images/blender.jpg" alt="Blender" class="imglink2">
-					</a>
-				</div>
-				<dl>
-					<dt>ZBrush</dt>
-					<dd>3D modeling software that is mainly focused in 3D sculpting. Mostly used for characters.</dd>
-				</dl>
-				<div class="img">
-					<a href="https://pixologic.com/" target="_blank">
-						<img src="images/zbrush.png" alt="Zbrush" class="imglink2">
-					</a>
-				</div>
-			</div>
-		</div>
-	</main>
-	<footer>
-		<div class="copy">
-			copyright &copy; ramon luna carrillo
-		</div>
-		<div class="imglink">
-			<a href="links.html">links to images used</a>
-		</div>
-	</footer>
-</body>
-
+  <body>
+    <header id="tool-img">
+      <div class="container">
+        <h1>Tools</h1>
+        <p class="p-h">Collection of software and materials.</p>
+      </div>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="2D.html">2D</a></li>
+        <li><a href="3D.html">3D</a></li>
+        <li><a href="resources.html">Resources</a></li>
+        <li><a class="active" href="tools.html">Tools</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <main>
+      <div class="container">
+        <div class="logoimg">
+          <img src="images/website%20logo.jpg" id="logo" alt="Logo" />
+        </div>
+        <h2>Software and Hardware</h2>
+        <p>List of tools you'll need to get you started.</p>
+        <div class="d-list">
+          <h3>Hardware</h3>
+          <dl>
+            <dt>Computer</dt>
+            <dd>
+              Nothing to special is needed to get started. For 2D artists, a
+              simple computer from your local best buy should do. As for 3D
+              artists then a bit more powerfull computer is needed. Although
+              work can be done without a dedicated graphics card. It would be
+              best to have a computer with one for better performance.
+            </dd>
+          </dl>
+          <dl>
+            <dt>Wacom Tablets</dt>
+            <dd>
+              Wacom are a good choice to start off. Don't spend money on a
+              cintiq, since they are way to expensive.
+            </dd>
+          </dl>
+          <div class="img">
+            <a
+              href="https://us-store.wacom.com/catalog/pen-tablets/wacom-intuos"
+              target="_blank"
+            >
+              <img src="images/wacum.jpg" alt="Wacom" class="imglink2" />
+            </a>
+          </div>
+          <dl>
+            <dt>Huion Tablets</dt>
+            <dd>
+              Huion are a cheaper version of wacom but they are just as good.
+              Very good choice if you are tight on money.
+            </dd>
+          </dl>
+          <div class="img">
+            <a
+              href="https://www.huiontablet.com/all-products/graphic-tablets/680tf.html"
+              target="_blank"
+            >
+              <img src="images/Huion.JPG" alt="Huion" class="imglink2" />
+            </a>
+          </div>
+        </div>
+        <div class="d-list">
+          <h3>Software For 2D</h3>
+          <dl>
+            <dt>Photoshop</dt>
+            <dd>
+              Photoshop is the industrial standard but adobe sells it as a
+              service. There is a monthy fee but with that fee they offer cloud
+              storage.
+            </dd>
+          </dl>
+          <div class="img">
+            <a
+              href="https://www.adobe.com/products/photoshop.html?sdid=KKQIN&mv=search&ef_id=Cj0KCQiA6dLgBRDoARIsAJgoM4seFOAV4TZHWeE5wPuonVJFgO7VDqYREh9qCyPtQ8kLzi8D_xzu37waAr5iEALw_wcB:G:s&s_kwcid=AL!3085!3!301413807968!e!!g!!photoshop"
+              target="_blank"
+            >
+              <img
+                src="images/Photoshop.png"
+                alt="Photoshop"
+                class="imglink2"
+              />
+            </a>
+          </div>
+          <dl>
+            <dt>Clip Studio Paint</dt>
+            <dd>
+              Clip Studio was mainly made for comic books but works the same way
+              as photoshop with out the service fee. Sometimes it's on sale.
+            </dd>
+          </dl>
+          <div class="img">
+            <a href="https://www.clipstudio.net/en" target="_blank">
+              <img
+                src="images/Clip%20Studio%20Paint.JPG"
+                alt="Clip Studio Paint"
+                class="imglink2"
+              />
+            </a>
+          </div>
+          <dl>
+            <dt>Free Options</dt>
+            <dd>Here are some free options that do the same thing.</dd>
+          </dl>
+          <div class="img">
+            <a href="https://krita.org/en/" target="_blank">
+              <img src="images/krita.jpg" alt="Krita" class="imglink2" />
+            </a>
+            <a href="https://medibangpaint.com/en/" target="_blank">
+              <img src="images/medibang.jpg" alt="Medibang" class="imglink2" />
+            </a>
+          </div>
+        </div>
+        <div class="d-list">
+          <h3>Software For 3D</h3>
+          <dl>
+            <dt>Blender</dt>
+            <dd>
+              Free software for 3D modeling, a great start for anyone to learn.
+            </dd>
+          </dl>
+          <div class="img">
+            <a href="https://www.blender.org/" target="_blank">
+              <img src="images/blender.jpg" alt="Blender" class="imglink2" />
+            </a>
+          </div>
+          <dl>
+            <dt>ZBrush</dt>
+            <dd>
+              3D modeling software that is mainly focused in 3D sculpting.
+              Mostly used for characters.
+            </dd>
+          </dl>
+          <div class="img">
+            <a href="https://pixologic.com/" target="_blank">
+              <img src="images/zbrush.png" alt="Zbrush" class="imglink2" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="copy">copyright &copy; ramon luna carrillo</div>
+      <div class="imglink">
+        <a href="links.html">links to images used</a>
+      </div>
+    </footer>
+  </body>
 </html>
