--- a/2D.html
+++ b/2D.html
@@ -1,83 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Design Source is place for new designers learn about 2D and 3D design. As well as a collection of tools to get a good start."
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Design Source | 2D</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Design Source is place for new designers learn about 2D and 3D design. As well as a collection of tools to get a good start.">
-	<link rel="stylesheet" href="styles.css">
-	<title>Design Source | 2D</title>
-</head>
-
-<body>
-	<header id="two-img">
-		<div class="container">
-			<h1>
-				2D Artists
-			</h1>
-			<p class="p-h">
-				Help design the visuals for the next gen of games.
-			</p>
-		</div>
-	</header>
-	<nav>
-		<ul>
-			<li><a href="home.html">Home</a></li>
-			<li><a class="active" href="2D.html">2D</a></li>
-			<li><a href="3D.html">3D</a></li>
-			<li><a href="resources.html">Resources</a></li>
-			<li><a href="tools.html">Tools</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</nav>
-	<main>
-		<div class="container">
-			<div class="logoimg">
-				<img src="images/website%20logo.jpg" id="logo" alt="Logo">
-			</div>
-			<h2>2D Design</h2>
-			<p></p>
-			<div class="vid-links">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/Vk77_5KroB0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/-ZnyBJdXypI" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-			<table>
-				<caption>Concepts To Learn</caption>
-				<tr>
-					<th>Fundamentals</th>
-					<th>Description</th>
-				</tr>
-				<tr>
-					<td>Perspective</td>
-					<td>Understanding how cameras work and placing objects in 3D space.</td>
-				</tr>
-				<tr>
-					<td>Lighting</td>
-					<td>Lighting objects and calculating shadows and reflections.</td>
-				</tr>
-				<tr>
-					<td>Color theory</td>
-					<td>How to mix and work with color.</td>
-				</tr>
-				<tr>
-					<td>Composition</td>
-					<td>Creating moods and story telling.</td>
-				</tr>
-				<tr>
-					<td>Design</td>
-					<td>Creating pleasing asthetics and motifs</td>
-				</tr>
-			</table>
-		</div>
-	</main>
-	<footer>
-		<div class="copy">
-			copyright &copy; ramon luna carrillo
-		</div>
-		<div class="imglink">
-			<a href="links.html">links to images used</a>
-		</div>
-	</footer>
-</body>
-
+  <body>
+    <header id="two-img">
+      <div class="container">
+        <h1>2D Artists</h1>
+        <p class="p-h">Help design the visuals for the next gen of games.</p>
+      </div>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="2D.html">2D</a></li>
+        <li><a href="3D.html">3D</a></li>
+        <li><a href="resources.html">Resources</a></li>
+        <li><a href="tools.html">Tools</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <main>
+      <div class="container">
+        <div class="logoimg">
+          <img src="images/website%20logo.jpg" id="logo" alt="Logo" />
+        </div>
+        <h2>2D Design</h2>
+        <p></p>
+        <div class="vid-links">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/Vk77_5KroB0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/-ZnyBJdXypI"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <table>
+          <caption>
+            Concepts To Learn
+          </caption>
+          <tr>
+            <th>Fundamentals</th>
+            <th>Description</th>
+          </tr>
+          <tr>
+            <td>Perspective</td>
+            <td>
+              Understanding how cameras work and placing objects in 3D space.
+            </td>
+          </tr>
+          <tr>
+            <td>Lighting</td>
+            <td>Lighting objects and calculating shadows and reflections.</td>
+          </tr>
+          <tr>
+            <td>Color theory</td>
+            <td>How to mix and work with color.</td>
+          </tr>
+          <tr>
+            <td>Composition</td>
+            <td>Creating moods and story telling.</td>
+          </tr>
+          <tr>
+            <td>Design</td>
+            <td>Creating pleasing asthetics and motifs</td>
+          </tr>
+        </table>
+      </div>
+    </main>
+    <footer>
+      <div class="copy">copyright &copy; ramon luna carrillo</div>
+      <div class="imglink">
+        <a href="links.html">links to images used</a>
+      </div>
+    </footer>
+  </body>
 </html>
