--- a/contact.html
+++ b/contact.html
@@ -1,69 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Design Source is place for new designers learn about 2D and 3D design. As well as a collection of tools to get a good start."
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Design Source | Contact</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Design Source is place for new designers learn about 2D and 3D design. As well as a collection of tools to get a good start.">
-	<link rel="stylesheet" href="styles.css">
-	<title>Design Source | Contact</title>
-</head>
-
-<body>
-	<header id="con-img">
-		<div class="container">
-			<h1>
-				Contact
-			</h1>
-			<p class="p-h">
-				Suggest new content you would like to see on this page.
-			</p>
-		</div>
-	</header>
-	<nav>
-		<ul>
-			<li><a href="home.html">Home</a></li>
-			<li><a href="2D.html">2D</a></li>
-			<li><a href="3D.html">3D</a></li>
-			<li><a href="resources.html">Resources</a></li>
-			<li><a href="tools.html">Tools</a></li>
-			<li><a class="active" href="contact.html">Contact</a></li>
-		</ul>
-	</nav>
-	<main>
-		<div class="container">
-			<div class="logoimg">
-				<img src="images/website%20logo.jpg" id="logo" alt="Logo">
-			</div>
-			<h2>Submit suggestions</h2>
-			<p>
-				A forum would be a better solution but ain't nobody got time for that!
-			</p>
-			<div class="my-form">
-				<form method="post" action="http://webdevbasics.net/scripts/demo.php">
-					<label for="name">Name:</label>
-					<input type="text" id="name" name="name">
-					<label for="email">E-mail:</label>
-					<input type="text" id="email" name="name">
-					<label for="link">Link:</label>
-					<input type="text" name="link" id="link">
-					<label for="comments">Comments:</label>
-					<textarea name="comments" id="comments" rows="10">
-				</textarea>
-					<input type="submit" value="Submit" class="button" 
-					onclick="alert('Thanks for your suggestion. I will add it to the website once I learn PHP.');">
-				</form>
-			</div>
-		</div>
-	</main>
-	<footer>
-		<div class="copy">
-			copyright &copy; ramon luna carrillo
-		</div>
-		<div class="imglink">
-			<a href="links.html">links to images used</a>
-		</div>
-	</footer>
-</body>
-
+  <body>
+    <header id="con-img">
+      <div class="container">
+        <h1>Contact</h1>
+        <p class="p-h">
+          Suggest new content you would like to see on this page.
+        </p>
+      </div>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="2D.html">2D</a></li>
+        <li><a href="3D.html">3D</a></li>
+        <li><a href="resources.html">Resources</a></li>
+        <li><a href="tools.html">Tools</a></li>
+        <li><a class="active" href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <main>
+      <div class="container">
+        <div class="logoimg">
+          <img src="images/website%20logo.jpg" id="logo" alt="Logo" />
+        </div>
+        <h2>Submit suggestions</h2>
+        <p>
+          A forum would be a better solution but ain't nobody got time for that!
+        </p>
+        <div class="my-form">
+          <form method="post" action="http://webdevbasics.net/scripts/demo.php">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" />
+            <label for="email">E-mail:</label>
+            <input type="text" id="email" name="name" />
+            <label for="link">Link:</label>
+            <input type="text" name="link" id="link" />
+            <label for="comments">Comments:</label>
+            <textarea name="comments" id="comments" rows="10"> </textarea>
+            <input
+              type="submit"
+              value="Submit"
+              class="button"
+              onclick="alert('Thanks for your suggestion. I will add it to the website once I learn PHP.');"
+            />
+          </form>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="copy">copyright &copy; ramon luna carrillo</div>
+      <div class="imglink">
+        <a href="links.html">links to images used</a>
+      </div>
+    </footer>
+  </body>
 </html>
