--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
           A forum would be a better solution but ain't nobody got time for that!
         </p>
         <div class="my-form">
-          <form method="post" action="">
+          <form>
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" />
             <label for="email">E-mail:</label>
